@@ -1,5 +1,6 @@
 V.17.2.0
 ---------
+- [PATCH] isSupportedByTargetedBroker should only be invoked in bg thread (#2339)
 - [PATCH] Handle repeated camera requests. (#2332)
 - [MINOR] Clear active broker cache if the (cached) active broker app doesn't support ipc mechanism (#2331)
 - [MINOR] Add support for CIAM custom domain (#2314)
